[tool.poetry]
name = "pytorchddp"
version = "0.1.0"
description = ""
authors = ["heeler <jamie.sherman@alleninstitute.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"

[tool.poetry.scripts]
ddp_launch = "pytorchddp.scripts.runner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
